--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,10 @@ on:
 
 permissions:
   contents: write
+  packages: write
+  issues: write
+  pull-requests: write
+  actions: write
 
 jobs:
   build-and-release:
