--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,43 +1,34 @@
 name: Release (single EXE)
-
 on:
   push:
     tags:
       - 'v*.*.*'
-  workflow_dispatch: 
-
+  workflow_dispatch:
 permissions:
   contents: write
   packages: write
   issues: write
   pull-requests: write
   actions: write
-
 jobs:
   build-and-release:
     name: Build and publish single EXE
     runs-on: windows-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '10.0.x'
-
       - name: Restore
         run: dotnet restore MigrationBrowser.csproj -r win-x64
-
       - name: Build
         run: dotnet build MigrationBrowser.csproj -c Release -r win-x64 --no-restore
-
       - name: Publish single-file EXE (win-x64)
         run: |
           rm -Recurse -Force ./artifacts -ErrorAction SilentlyContinue
-          dotnet publish MigrationBrowser.csproj -c Release -r win-x64 --self-contained true -p:PublishSingleFile=true -p:PublishTrimmed=false -o ./artifacts/publish --no-build
-
+          dotnet publish MigrationBrowser.csproj -c Release -r win-x64 --self-contained true -p:PublishSingleFile=true -p:PublishTrimmed=false -p:DebugType=none -o ./artifacts/publish --no-build
       - name: Zip artifact
         shell: pwsh
         run: |
@@ -48,7 +39,6 @@ jobs:
           Write-Host "Zip created: $zip"
         env:
           GITHUB_REF_NAME: ${{ github.ref_name }}
-
       - name: Create GitHub release
         id: create_release
         uses: actions/create-release@v1
@@ -61,7 +51,6 @@ jobs:
             Release ${{ github.ref_name }} - single-file Windows EXE (win-x64)
           draft: false
           prerelease: false
-
       - name: Upload release asset
         uses: actions/upload-release-asset@v1
         env:
