--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,39 +11,27 @@ permissions:
 
 jobs:
   build-and-release:
-    name: Build and publish single-file EXE (win-x64)
     runs-on: windows-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup .NET 10 SDK
+      - name: Setup .NET 10
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '10.0.x'
 
-      - name: Restore dependencies
-        run: dotnet restore src/MigrationBrowser.csproj
-
-      - name: Build (Release)
-        run: dotnet build src/MigrationBrowser.csproj -c Release --no-restore
-
-      - name: Publish single-file self-contained EXE
+      - name: Publish single-file EXE (win-x64)
         run: |
-          # Clean previous artifacts
           if (Test-Path ./artifacts) { Remove-Item -Recurse -Force ./artifacts }
-          New-Item -ItemType Directory -Path ./artifacts/publish | Out-Null
-
-          dotnet publish src/MigrationBrowser.csproj `
-            -c Release `
-            -r win-x64 `
-            --self-contained true `
-            -p:PublishSingleFile=true `
-            -p:PublishTrimmed=false `
-            -p:IncludeNativeLibrariesForSelfExtract=true `
-            -p:IncludeAllContentForSelfExtract=true `
-            --no-build `
+          mkdir ./artifacts/publish
+          dotnet publish src/MigrationBrowser.csproj ^
+            -c Release ^
+            -r win-x64 ^
+            --self-contained true ^
+            -p:PublishSingleFile=true ^
+            -p:PublishTrimmed=false ^
+            -p:IncludeNativeLibrariesForSelfExtract=true ^
+            -p:IncludeAllContentForSelfExtract=true ^
             -o ./artifacts/publish
 
       - name: Create ZIP package
